etherpad/database.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
  labels:
    app: postgres
spec:
  ports:
  - port: 5432
    name: database
  selector:
    app: postgres
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  selector:
    matchLabels:
      app: postgres
  serviceName: "postgres"
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      volumes:
      - name: postgres-data
        persistentVolumeClaim:
          claimName: database
      containers:
      - name: postgres
        image: docker.io/postgres:14.4-alpine
        ports:
        - containerPort: 5432
          name: postgres
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql
